# Paragon

./: .gitignore  Cargo.toml  README.md
database/: candles.sql  empty.sql  sessions.sql  structures.sql  trends.sql  two_d_structures.sql
src/: lib.rs  main.rs
src/connections/: database.rs  mod.rs  websocket.rs
src/entities/: candle.rs  mod.rs  session.rs  structures.rs  timerange.rs  trend.rs  two_d_structures.rs
src/handlers/: candle.rs  mod.rs  sessions.rs  structures.rs  trends.rs  two_d_structures.rs
src/utils/: mod.rs  temporary.rs  utils.rs
