[package]
name = "paragon"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.41", features = ["serde"] }
dashmap = "6.1.0"
deadpool-postgres = "0.14.1"
futures = "0.3.31"
futures-util = "0.3.31"
once_cell = "1.21.3"
polars = { version = "0.48.1", features = ["parquet", "timezones"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = {version = "1.45.1" , features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
tokio-tungstenite = "0.26.2"

[features]
perf = []